[gd_scene load_steps=16 format=2]

[ext_resource path="res://MagicPortal.gd" type="Script" id=1]
[ext_resource path="res://MagicArea.gd" type="Script" id=2]
[ext_resource path="res://ViewportMesh.gd" type="Script" id=3]
[ext_resource path="res://PortalLabel.tscn" type="PackedScene" id=4]
[ext_resource path="res://PortalMaterial.tres" type="Material" id=5]
[ext_resource path="res://MagicMesh.gd" type="Script" id=6]
[ext_resource path="res://MagicParticles.gd" type="Script" id=7]

[sub_resource type="CubeMesh" id=26]
size = Vector3( 1, 1, 1 )

[sub_resource type="SpatialMaterial" id=37]
resource_local_to_scene = true
flags_transparent = true
params_diffuse_mode = 4
params_specular_mode = 4
albedo_color = Color( 1, 1, 1, 0.0392157 )
emission_enabled = true
emission = Color( 1, 1, 1, 1 )
emission_energy = 5.0
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="ParticlesMaterial" id=30]
lifetime_randomness = 1.0
emission_shape = 2
emission_box_extents = Vector3( 0.2, 0.2, 0.2 )
direction = Vector3( 0, 0, 0 )
spread = 20.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 1.0
initial_velocity_random = 0.2
damping = 0.2
damping_random = 0.2
scale_random = 1.0

[sub_resource type="SpatialMaterial" id=31]
resource_local_to_scene = true
flags_unshaded = true
params_diffuse_mode = 4
params_specular_mode = 4

[sub_resource type="CubeMesh" id=32]
material = SubResource( 31 )
size = Vector3( 0.03, 0.03, 0.03 )

[sub_resource type="BoxShape" id=27]
extents = Vector3( 0.5, 0.5, 0.2 )

[sub_resource type="QuadMesh" id=35]
size = Vector2( 1, 0.4 )

[sub_resource type="SpatialMaterial" id=36]
resource_local_to_scene = true
flags_unshaded = true
params_diffuse_mode = 4
params_specular_mode = 4

[node name="MagicPortal" type="Spatial"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 6, 1.5, -8.5 )
script = ExtResource( 1 )

[node name="FullBody" type="CSGCombiner" parent="."]
use_in_baked_light = true
use_collision = true

[node name="Frame" type="CSGCombiner" parent="FullBody"]
use_in_baked_light = true
use_collision = true

[node name="Base" type="CSGBox" parent="FullBody/Frame"]
use_in_baked_light = true
height = 3.0
depth = 1.0
material = ExtResource( 5 )

[node name="Cutout" type="CSGBox" parent="FullBody/Frame"]
use_in_baked_light = true
operation = 2
width = 1.0
depth = 1.0
material = ExtResource( 5 )

[node name="CSGPolygon" type="CSGPolygon" parent="FullBody"]
transform = Transform( -4.37114e-08, 0, 1.5, 0, 0.5, 0, -1, 0, -6.55671e-08, 0.75, -1.5, 1.5 )
use_in_baked_light = true
polygon = PoolVector2Array( 0, 0, 1, 0, 1, 1 )
material = ExtResource( 5 )

[node name="MagicArea" type="Area" parent="."]
transform = Transform( 0.99, 0, 0, 0, 1.99, 0, 0, 0, 0.69, 0, 0, 0 )
script = ExtResource( 2 )

[node name="MagicMesh" type="MeshInstance" parent="MagicArea"]
use_in_baked_light = true
mesh = SubResource( 26 )
material/0 = SubResource( 37 )
script = ExtResource( 6 )

[node name="MagicParticles" type="Particles" parent="MagicArea/MagicMesh"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.131085 )
amount = 10
lifetime = 2.0
preprocess = 0.1
explosiveness = 0.1
randomness = 1.0
process_material = SubResource( 30 )
draw_pass_1 = SubResource( 32 )
script = ExtResource( 7 )

[node name="CollisionShape" type="CollisionShape" parent="MagicArea"]
shape = SubResource( 27 )

[node name="PortalNameTag" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.25, 0.51 )
use_in_baked_light = true
mesh = SubResource( 35 )
material/0 = SubResource( 36 )
script = ExtResource( 3 )

[node name="Viewport" type="Viewport" parent="PortalNameTag"]
size = Vector2( 100, 40 )
transparent_bg = true
hdr = false
disable_3d = true
usage = 0
render_target_v_flip = true

[node name="PortalLabel" parent="PortalNameTag/Viewport" instance=ExtResource( 4 )]
